fix listing page overflow layout [Finishes #167011717]

--- a/UI/users/users.css
+++ b/UI/users/users.css
@@ -1,31 +1,12 @@
-/* #body-main__properties {
-    display: grid;
-    grid-template-rows: 0.5rem auto;
-    grid-template-areas: "header header"
-                        "main section"
-                        "footer footer";
-    height: 100%;
-} */
-
-/* html {
-    max-width: 200px;
-    max-height: 9000px;
-    overflow: auto;
-} */
-
 #body-main__properties {
     display: flex;
     flex-flow: column wrap;
-    /* justify-content: space-between; */
     margin: 1rem;
 }
 
 .property-search {
-    /* float: left; */
-    /* grid-area: footer; */
     margin: 1rem;
     width: 100%;
-    /* align-self: flex-start; */
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -40,20 +21,17 @@
     width: 18rem;
     margin-left: -5rem;
     margin-right: 3rem;
-    /* display: flex; */
 }
 
 .property-lists {
     display: flex;
     flex-flow: column wrap;
     align-self: center;
-    /* width: 100%; */
 }
 
 .featured-property__lists {
     display: flex;
     flex-flow: column nowrap;
-    /* justify-content: space-between; */
 }
 
 .featured-property__items, .recent-properties__items {
